--- a/extra_playbooks/roles/kubernetes-apps/fluentd-centralized/templates/3fluentd-centralized-role-binding.yaml.j2
+++ b/extra_playbooks/roles/kubernetes-apps/fluentd-centralized/templates/3fluentd-centralized-role-binding.yaml.j2
@@ -1,3 +1,4 @@
+# {{ansible_managed}}
 apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: ClusterRoleBinding
 metadata:
@@ -6,9 +7,8 @@ roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
   name: {{boss__fluentd__centralized__shared_name}}-read
-  apiGroup: ""
 subjects:
 - kind: ServiceAccount
   name: {{boss__fluentd__centralized__shared_name}}
   namespace: {{boss__fluentd__centralized__namespace_name}}
-  apiGroup: ""
+  # apiGroup: ""
