wip: borg manifest update

--- a/extra_playbooks/roles/kubernetes-apps/fluentd-centralized/templates/4fluentd-centralized-configmap-0-3-0.yaml.j2
+++ b/extra_playbooks/roles/kubernetes-apps/fluentd-centralized/templates/4fluentd-centralized-configmap-0-3-0.yaml.j2
@@ -1053,6 +1053,8 @@ data:
     # input plugin that collects metrics from MonitorAgent
     <source>
       @type prometheus_monitor
+      # update the metrics every 5 seconds
+      interval 5
       <labels>
         host ${hostname}
       </labels>
@@ -1060,6 +1062,8 @@ data:
     # input plugin that collects metrics for output plugin
     <source>
       @type prometheus_output_monitor
+      # update the metrics every 5 seconds
+      interval 5
       <labels>
         host ${hostname}
       </labels>
@@ -1067,6 +1071,8 @@ data:
     # input plugin that collects metrics for in_tail plugin
     <source>
       @type prometheus_tail_monitor
+      # update the metrics every 5 seconds
+      interval 5
       <labels>
         host ${hostname}
       </labels>
