almost: enabling elasticsearch

--- a/extra_playbooks/roles/kubernetes-apps/fluentd-centralized/templates/4fluentd-centralized-configmap-0-3-0.yaml.j2
+++ b/extra_playbooks/roles/kubernetes-apps/fluentd-centralized/templates/4fluentd-centralized-configmap-0-3-0.yaml.j2
@@ -1078,6 +1078,15 @@ data:
       </labels>
     </source>
 
+
+    # Concatenate multi-line logs
+    <filter **>
+      @type concat
+      key message
+      multiline_end_regexp /\n$/
+      separator ""
+    </filter>
+
     <match **.**>
       @type copy
       <store ignore_error>
