--- a/extra_playbooks/roles/kubernetes-apps/fluentd-centralized/templates/2fluentd-centralized-role.yaml.j2
+++ b/extra_playbooks/roles/kubernetes-apps/fluentd-centralized/templates/2fluentd-centralized-role.yaml.j2
@@ -1,7 +1,7 @@
 apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: ClusterRole
 metadata:
-  name: {{boss__fluentd__centralized__shared_name}}-read
+  name: {{boss__fluentd__centralized__shared_name}}
 {% if boss__fluentd__centralized__cluster_role_rules is defined %}
 {% if boss__fluentd__centralized__cluster_role_rules == "disabled" %}
 # rules:
