--- a/extra_playbooks/roles/kubernetes-apps/fluentd-centralized/templates/3fluentd-centralized-role-binding.yaml.j2
+++ b/extra_playbooks/roles/kubernetes-apps/fluentd-centralized/templates/3fluentd-centralized-role-binding.yaml.j2
@@ -4,11 +4,12 @@ kind: ClusterRoleBinding
 metadata:
   name: {{boss__fluentd__centralized__shared_name}}
 roleRef:
-  apiGroup: rbac.authorization.k8s.io
+  # apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
   name: {{boss__fluentd__centralized__shared_name}}
+  apiGroup: ""
 subjects:
 - kind: ServiceAccount
   name: {{boss__fluentd__centralized__shared_name}}
   namespace: {{boss__fluentd__centralized__namespace_name}}
-  # apiGroup: ""
+  apiGroup: ""
