WOOT: fluentd-centralized -> es connected ... I actually see logs this time

--- a/extra_playbooks/roles/kubernetes-apps/fluentd-centralized/templates/4fluentd-centralized-configmap-0-3-0.yaml.j2
+++ b/extra_playbooks/roles/kubernetes-apps/fluentd-centralized/templates/4fluentd-centralized-configmap-0-3-0.yaml.j2
@@ -836,7 +836,7 @@ data:
       @id ingest_from_unifi_iptables_ubiquiti_rule_set
       read_from_head true
       # tag ingest_from_unifi_iptables_ubiquiti_rule_set
-      pos_file {{boss__fluentd__centralized__path_to_logs_inside_container}}/fluentd.pos
+      pos_file /var/log/fluentd.pos
       path {{boss__fluentd__centralized__path_to_logs_inside_container}}/client_logs/**/*.log
       tag unifi.syslog.**
       <parse>
@@ -1106,7 +1106,8 @@ data:
         template_name elasticsearch-template-es5x.json
         <buffer>
           @type file
-          path {{boss__fluentd__centralized__path_to_logs_inside_container}}/fluentd.centralized.system.buffer
+          flush_thread_count 8
+          path /var/log/fluentd.centralized.system.buffer
           flush_mode interval
           retry_type exponential_backoff
           flush_thread_count 2
