--- a/extra_playbooks/roles/kubernetes-apps/fluentd-centralized/templates/4fluentd-centralized-configmap-0-3-0.yaml.j2
+++ b/extra_playbooks/roles/kubernetes-apps/fluentd-centralized/templates/4fluentd-centralized-configmap-0-3-0.yaml.j2
@@ -829,14 +829,17 @@ data:
     # system.conf: |-
     <system>
       root_dir /tmp/fluentd-buffers/
+      # workers 4
     </system>
 
+    # <worker 0>
     <source>
       @type tail
       @id ingest_from_unifi_iptables_ubiquiti_rule_set
       read_from_head true
       # tag ingest_from_unifi_iptables_ubiquiti_rule_set
-      pos_file /var/log/fluentd.pos
+      # pos_file {{boss__fluentd__centralized__path_to_logs_inside_container}}/fluentd.unifi.pos
+      pos_file /var/log/fluentd.unifi.pos
       path {{boss__fluentd__centralized__path_to_logs_inside_container}}/client_logs/**/*.log
       tag unifi.syslog.**
       <parse>
@@ -850,6 +853,7 @@ data:
         keep_time_key true
       </parse>
     </source>
+    # </worker>
 
     # # Detect exceptions in the log output and forward them as one log entry.
     # <match unifi.syslog.**>
@@ -1106,11 +1110,11 @@ data:
         template_name elasticsearch-template-es5x.json
         <buffer>
           @type file
-          flush_thread_count 8
+          flush_thread_count 2
           path /var/log/fluentd.centralized.system.buffer
           flush_mode interval
           retry_type exponential_backoff
-          flush_thread_count 2
+          # flush_thread_count 2
           flush_interval 5s
           retry_forever
           retry_max_interval 30
